force-app/main/default/objects/fferpcore__SequenceField__mdt/fields/fferpcore__IncludeRecord__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IncludeRecord__c</fullName>
    <description>A checkbox or formula field on the record that determines whether it is to be sequenced. The checkbox or formula field must be equal to true for the record to be sequenced.</description>
    <inlineHelpText>A checkbox or formula field on the record that determines whether it is to be sequenced. The checkbox or formula field must be equal to true for the record to be sequenced.</inlineHelpText>
    <label>Include Record</label>
    <metadataRelationshipControllingField>fferpcore__SequenceField__mdt.fferpcore__Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Sequence Filters</relationshipLabel>
    <relationshipName>SequenceFilters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>