force-app/main/default/objects/fferpcore__SequenceField__mdt/fields/fferpcore__Sequence__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Sequence__c</fullName>
    <description>Lookup to the Sequence to which this record relates.</description>
    <inlineHelpText>Lookup to the Sequence to which this record relates.</inlineHelpText>
    <label>Sequence</label>
    <referenceTo>fferpcore__Sequence__mdt</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>